--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
       "source.fixAll.eslint": true,
       "source.fixAll": true
   },
+  "eslint.validate": ["javascript", "typescript"],
 
   //Enable brackets {} colorization
   "editor.bracketPairColorization.enabled": true,
