--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
       "useTabs": "off",
       "@typescript-eslint/explicit-module-boundary-types": "off",
       "@typescript-eslint/explicit-function-return-type": "off",
-      "@typescript-eslint/no-explicit-any": "warn",
+      "@typescript-eslint/no-explicit-any": "off",
       "@typescript-eslint/no-unused-vars": "warn",
       "@typescript-eslint/no-empty-function": "off",
       "@typescript-eslint/quotes": [
