--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "workbench.colorTheme": "Angular Dark Theme",
+  "workbench.colorTheme": "Dracula Refined",
   "workbench.colorCustomizations": {
       "editorLineNumber.activeForeground": "#e4d613",
       "editor.selectionBackground": "#00b7ff86",
