--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.2.0",
     "prettier": "^2.5.1"
+  },
+  "dependencies": {
+    "@angular/cli": "^13.2.6"
   }
 }
