--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,4 +32,5 @@
   "code-runner.clearPreviousOutput": true,
   "diffEditor.ignoreTrimWhitespace": false,
   "editor.tabSize": 2,
+  "angular.enable-strict-mode-prompt": false,
 }
